# LightGL

./: CMakeLists.txt  LICENSE  README.mkd
data/: monkey.3ds  monkey.blend  stone.tga  wood.tga
src/: main.c  scene.c  scene.h
src/3ds/: 3ds.c  3ds.h
src/LGL/: lgl.c  lgl.h  lglu.c  lglu.h
src/tga/: tga.c  tga.h
