cmake_minimum_required (VERSION 2.6)
project(lightgldemo C)
find_package(SDL REQUIRED)
include_directories(${SDL_INCLUDE_DIR})
add_library(lightgl src/LGL/lgl.c src/LGL/lglu.c)
add_library(tga src/tga/tga.c)
add_library(3ds src/3ds/3ds.c)
add_executable(lgldemo src/main.c src/scene.c)
target_link_libraries(lgldemo lightgl tga 3ds ${SDL_LIBRARY} SDLmain)
